--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </nav>
     <h2 id="bottom-header">Explore Australia</h2>
     <img id="header-image" alt="Header Image" src="/assets/header-img.jpeg">
+    
     </header>
-
     <section class="box-section">
         <div class="box" id="box-1">
             <p id="image-text">
@@ -38,6 +38,7 @@
             </p>
             <img id="image" src="/assets/image-1.jpeg" alt="Places to visit Image">
         </div>
+
         <div class="box" id="box-2">
             <p id="image-text">
                 Attractions
@@ -57,7 +58,7 @@
             <img id="image" src="/assets/Traditional-Lamingtons-5.jpeg" alt="Culture Image">
         </div>
     </section>
-
+<img id="animation-box" src="/assets/24Rx.gif">
     <footer>
         <div class="footer-container">
             <div class="icon-container">
