added multiple pages
places to visit, attractions, facts and culture pages are added.

--- a/index.html
+++ b/index.html
@@ -4,72 +4,107 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="index.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/kang.png">
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="assets/kang.png" />
     <title>Australia Travel Guide</title>
   </head>
   <body>
     <header>
+      <!-- navigasjonsbar -->
       <nav>
-        <h1 id="nav-header">AUSTRALIA TRAVEL GUIDE</h1>
+        <h1 id="nav-header"><a href="index.html">AUSTRALIA TRAVEL GUIDE</a></h1>
         <ul class="nav-container">
           <li class="nav-link">
-            <a href="#">Places to visit</a>
+            <a href="placestovisit.html">Places to visit</a>
           </li>
           <li class="nav-link">
-            <a href="#">Attractions</a>
+            <a href="attractions.html">Attractions</a>
           </li>
           <li class="nav-link">
-            <a href="#">Facts</a>
+            <a href="facts.html">Facts</a>
           </li>
           <li class="nav-link">
-            <a href="#">Culture</a>
+            <a href="culture.html">Culture</a>
           </li>
         </ul>
       </nav>
-    <h2 id="bottom-header">Explore Australia</h2>
-    <img id="header-image" alt="Header Image" src="/assets/header-img.jpeg">
-    
-    </header>
-    <section class="box-section">
-        <div class="box" id="box-1">
-            <p id="image-text">
-                Places to visit
-            </p>
-            <img id="image" src="/assets/image-1.jpeg" alt="Places to visit Image">
-        </div>
 
-        <div class="box" id="box-2">
-            <p id="image-text">
-                Attractions
-            </p>
-            <img id="image" src="/assets/image-3.jpeg" alt="Attractions Image">
-        </div>
-        <div class="box" id="box-3">
-            <p id="image-text">
-                Facts
-            </p>
-            <img id="image" src="/assets/kangaroo3.jpeg" alt="Facts Image">
-        </div>
-        <div class="box" id="box-4">
-            <p id="image-text">
-                Culture
-            </p>
-            <img id="image" src="/assets/Traditional-Lamingtons-5.jpeg" alt="Culture Image">
-        </div>
+      <!-- header-bildet og overskrift -->
+      <h2 id="bottom-header">Explore Australia</h2>
+      <img id="header-image" alt="Header Image" src="assets/header-img.jpeg" />
+    </header>
+
+    <!-- bildegalleri med linker til hver av sidene -->
+    <section class="box-section">
+      <div class="box" id="box-1">
+        <a href="placestovisit.html">
+          <p class="img-gallery-txt">Places to visit</p>
+          <img
+            class="img-gallery"
+            src="assets/image-1.jpeg"
+            alt="Places to visit Image"
+          />
+        </a>
+      </div>
+      <div class="box" id="box-2">
+        <a href="attractions.html">
+          <p class="img-gallery-txt">Attractions</p>
+          <img
+            class="img-gallery"
+            src="assets/image-3.jpeg"
+            alt="Attractions Image"
+        /></a>
+      </div>
+      <div class="box" id="box-3">
+        <a href="facts.html">
+          <p class="img-gallery-txt">Facts</p>
+          <img
+            class="img-gallery"
+            src="assets/kangaroo3.jpeg"
+            alt="Facts Image"
+        /></a>
+      </div>
+      <div class="box" id="box-4">
+        <a href="culture.html">
+          <p class="img-gallery-txt">Culture</p>
+          <img
+            class="img-gallery"
+            src="assets/Traditional-Lamingtons-5.jpeg"
+            alt="Culture Image"
+        /></a>
+      </div>
     </section>
-<img id="animation-box" src="/assets/24Rx.gif">
+
+    <!-- animasjonsgif 
+    <img id="animation-box" src="assets/24Rx.gif" alt="spider gif animation" /> -->
+
+    <!-- footer med ikoner for sosiale media -->
     <footer>
-        <div class="footer-container">
-            <div class="icon-container">
-                <img id="social-icon" alt="Snapchat" src="/assets/snapchat-icon.png">
-                <img id="social-icon" alt="Twitter" src="/assets/twitter-icon.png">
-                <img id="social-icon" alt="Facebook" src="/assets/facebook-icon.png">
-                <img id="social-icon" alt="Instagram" src="/assets/insta-icon.png">
-                
-            </div>
-            <p id="footer-text">AustraliaTravelGuide</p>
+      <div class="footer-container">
+        <div class="icon-container">
+          <img
+            class="social-icon"
+            alt="Snapchat"
+            src="assets/snapchat-icon.png"
+          />
+          <img
+            class="social-icon"
+            alt="Twitter"
+            src="assets/twitter-icon.png"
+          />
+          <img
+            class="social-icon"
+            alt="Facebook"
+            src="assets/facebook-icon.png"
+          />
+          <img
+            class="social-icon"
+            alt="Instagram"
+            src="assets/insta-icon.png"
+          />
         </div>
+        <p id="footer-text">AustraliaTravelGuide</p>
+      </div>
     </footer>
   </body>
 </html>
