--- a/culture.html
+++ b/culture.html
@@ -110,26 +110,10 @@
     <footer>
       <div class="footer-container">
         <div class="icon-container">
-          <img
-            id="social-icon"
-            alt="Snapchat"
-            src="assets/snapchat-icon.png"
-          />
-          <img
-            id="social-icon"
-            alt="Twitter"
-            src="assets/twitter-icon.png"
-          />
-          <img
-            id="social-icon"
-            alt="Facebook"
-            src="assets/facebook-icon.png"
-          />
-          <img
-            id="social-icon"
-            alt="Instagram"
-            src="assets/insta-icon.png"
-          />
+          <img id="social-icon" alt="Snapchat" src="assets/snapchat-icon.png" />
+          <img id="social-icon" alt="Twitter" src="assets/twitter-icon.png" />
+          <img id="social-icon" alt="Facebook" src="assets/facebook-icon.png" />
+          <img id="social-icon" alt="Instagram" src="assets/insta-icon.png" />
         </div>
         <p id="footer-text">Australia Travel Guide</p>
       </div>
