--- a/placestovisit.html
+++ b/placestovisit.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <!-- nav bar -->
       <nav>
         <h1 id="nav-header"><a href="index.html">AUSTRALIA TRAVEL GUIDE</a></h1>
         <ul class="nav-container">
@@ -42,7 +43,7 @@
    <!-- animasjonsgif -->
     <img id="animation-box" src="assets/24Rx.gif" alt="spider gif animation" />
 
-
+    <!-- flexbox container med paragrafer og bilder av hver av byene -->
        <div class="container">
             <div class="Sydney"> 
                 <div>
